* Applied patch by kaliber: those headers weren't self-containing. * This closes bug #2346.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26841 a95241bf-73f2-0310-859d-f6bbb57e9c96